--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:onClick="onClick"
-        android:text="Two Activity"
+        android:text="Open TwoActivity"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
