--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,5 +27,17 @@
         android:textColor="@color/black"
         android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/btn_void"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_test"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:onClick="onClick"
+        android:text="Open VoidActivity"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
 
 </RelativeLayout>
